docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-executor-version-0-2-quantum-program-model.mdx
---
title: QuantumProgramModel (v0.49)
description: API reference for ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel
---

<span id="ibm-quantum-schemas-executor-version-0-2-quantumprogrammodel" />

# QuantumProgramModel

<Class id="ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.10.20260723/ibm_quantum_schemas/executor/version_0_2/models.py#L182-L221" signature="QuantumProgramModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Model to store a quantum program.

  ### items

  <Attribute id="ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel.items" modifiers="field">
    Type: `list`\[`Annotated`\[[`CircuitItemModel`](ibm-quantum-schemas-executor-version-0-2-circuit-item-model "ibm_quantum_schemas.executor.version_0_2.CircuitItemModel") | [`SamplexItemModel`](ibm-quantum-schemas-executor-version-0-2-samplex-item-model "ibm_quantum_schemas.executor.version_0_2.SamplexItemModel"), `Field`(`discriminator``=``'item_type'`)]]

    Items of the program.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
  </Attribute>

  ### meas\_level

  <Attribute id="ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel.meas_level" modifiers="field">
    Type: `Literal`\[`'classified'`, `'kerneled'`, `'avg_kerneled'`]

    Default value: `'classified'`

    The level at which to return all classical register measurement results.

    This option sets the return type of all classical registers in all quantum program items and determines whether the raw complex data from low-level measurement devices is discriminated into bits or not.

    > *   **“classified”: Classical register data is returned as boolean arrays with the intrinsic shape**
    >
    >     `(num_shots, creg_size)`.
    >
    > *   **“kerneled”: Classical register data is returned as a complex array with the intrinsic shape**
    >
    >     `(num_shots, creg_size)`, where each entry represents an IQ data point (resulting from kerneling the measurement trace) in arbitrary units.
    >
    > *   **“avg\_kerneled”: Classical register data is returned as a complex array with the intrinsic**
    >
    >     shape `(creg_size,)`, where data is equivalent to “kerneled” except additionally averaged over shots.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
  </Attribute>

  ### passthrough\_data

  <Attribute id="ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel.passthrough_data" modifiers="field">
    Type: `DataTree`

    Default value: `None`

    Arbitrary nested data passed through execution without modification.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
  </Attribute>

  ### shots

  <Attribute id="ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel.shots" modifiers="field">
    Type: `int`

    The number of shots for each individually bound circuit.

    **Constraints**

    *   **ge** = 1

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
  </Attribute>

  ### check\_chunk\_sizes\_are\_consistent

  <Function id="ibm_quantum_schemas.executor.version_0_2.QuantumProgramModel.check_chunk_sizes_are_consistent" github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.10.20260723/ibm_quantum_schemas/executor/version_0_2/models.py#L191-L201" signature="check_chunk_sizes_are_consistent" modifiers="validator">
    Check that all program items set chunk sizes consistently.
  </Function>
</Class>

